[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.28" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
models = {path = "../../models/rust"}
may = "0.3.21"
log = "0.4.17"
tokio = "*"